--- a/setup.sty
+++ b/setup.sty
@@ -12,6 +12,8 @@
 \usepackage{booktabs}
 \usepackage{cancel}
 \usepackage{amsmath}
+\usepackage{titlesec}  
+\usepackage{ulem}      
 \usepackage{minted}
 \usepackage{csquotes}
 \usepackage{gensymb}
@@ -168,3 +170,87 @@
   \let\@ifnextchar\new@ifnextchar
   \array{#1}}
 \makeatother
+
+
+%================================
+% THEOREM BOX
+%================================
+
+\tcbuselibrary{theorems, skins, hooks}
+\newtcbtheorem[number within=subsection]{Theorem}{Teorema}
+{%
+    enhanced,
+    breakable,
+    colback=white,
+    frame hidden,
+    boxrule=0sp,
+    borderline west={2pt}{0pt}{black},
+    sharp corners,
+    detach title,
+    before upper=\tcbtitle\par\smallskip,
+    coltitle=black,
+    fonttitle=\bfseries\sffamily,
+    description font=\mdseries,
+    separator sign none,
+    segmentation style={solid, black}
+}
+{th}
+
+%================================
+% EXAMPLE BOX
+%================================
+
+\newtcbtheorem[number within=section]{Example}{\faPencil $\;$ Esempio}
+{%
+    colback=blue!5!white,
+    breakable,
+    colframe=blue!30!black,
+    coltitle=blue!40!black,
+    boxrule=1pt,
+    sharp corners,
+    detach title,
+    before upper=\tcbtitle\par\smallskip,
+    fonttitle=\bfseries,
+    description font=\mdseries,
+    separator sign none,
+    description delimiters parenthesis
+}
+{ex}
+
+%================================
+% DEFINITION BOX
+%================================
+
+\newtcbtheorem[number within=section]{Definition}{\faHandORight $\;$ Definizione}
+{%
+    enhanced,
+    before skip=2mm,
+    after skip=2mm,
+    colback=green!5,
+    colframe=green!80!black,
+    boxrule=0.5mm,
+    attach boxed title to top left={xshift=1cm, yshift*=1mm-\tcboxedtitleheight},
+    varwidth boxed title*=-3cm,
+    boxed title style={frame code={
+        \path[fill=tcbcolback]
+        ([yshift=-1mm,xshift=-1mm]frame.north west)
+        arc[start angle=0,end angle=180,radius=1mm]
+        ([yshift=-1mm,xshift=1mm]frame.north east)
+        arc[start angle=180,end angle=0,radius=1mm];
+        
+        \path[left color=tcbcolback!60!black, right color=tcbcolback!60!black, middle color=tcbcolback!80!black]
+        ([xshift=-2mm]frame.north west) -- ([xshift=2mm]frame.north east)
+        [rounded corners=1mm]-- ([xshift=1mm,yshift=-1mm]frame.north east)
+        -- (frame.south east) -- (frame.south west)
+        -- ([xshift=-1mm,yshift=-1mm]frame.north west)
+        [sharp corners]-- cycle;
+    }, interior engine=empty},
+    fonttitle=\bfseries,
+    title={#2},
+    #1
+}
+{def}
+
+\newcommand{\thm}[3][]{\begin{Theorem}{#2}{#1}#3\end{Theorem}}
+\newcommand{\ex}[3][]{\begin{Example}{#2}{#1}#3\end{Example}}
+\newcommand{\dfn}[3][]{\begin{Definition}[colbacktitle=green!75!black]{#2}{#1}#3\end{Definition}}
