--- a/setup.sty
+++ b/setup.sty
@@ -10,6 +10,8 @@
 \pgfplotsset{compat=1.18,width=10cm}
 \usepackage{tikz-cd}
 \usepackage{booktabs}
+\usepackage{geometry}
+\usepackage{setspace}
 \usepackage{cancel}
 \usepackage{amsmath}
 \usepackage{titlesec}  
@@ -17,6 +19,8 @@
 \usepackage{minted}
 \usepackage{csquotes}
 \usepackage{gensymb}
+\usepackage{geometry}
+\usepackage{setspace}
 \usepackage{forest}
 \usepackage{amsthm}
 \usepackage{amssymb}
@@ -31,6 +35,8 @@
 \usepackage{mathtools}
 \DeclarePairedDelimiter\ceil{\lceil}{\rceil}
 \DeclarePairedDelimiter\floor{\lfloor}{\rfloor}
+\usetikzlibrary {positioning}
+\definecolor {processblue}{cmyk}{0.96,0,0,0}
 
 \hypersetup{
     colorlinks=true, %set true if you want colored links
