--- a/Second Year/Algoritmi/Algoritmi.tex
+++ b/Second Year/Algoritmi/Algoritmi.tex
@@ -1,6 +1,8 @@
 \documentclass[a4paper]{article}
 \usepackage{import}
 \input{../../setup.sty}
+
+\onehalfspacing
 \title{Algoritmi}
 \author{Università di Verona\\Imbriani Paolo -VR500437\\Professor Roberto Segala}
 
@@ -3041,7 +3043,82 @@ Tuttavia come si sceglie il valore $A$? Il valore ideale di $A$ è $\frac{\sqrt{
 Questo numero è molto vicino a $0.6180339887$ che è il numero aureo. Questo valore permette di avere una distribuzione uniforme degli elementi nell'array. Questo numero appare
 spesso in natura, ad esempio nelle conchiglie, nelle piante, nell'arte, nell'architettura, ecc. Questo numero è anche il rapporto tra due numeri della sequenza di Fibonacci.
 
+\section{Grafi}
+
+I grafi sono indubbiamente lo strumento più usato per astrarre problemi concreti e metterli mettere su "carta". 
+Un grafo, in maniera molto semplice, non è nient'altro che un insieme di nodi uniti da archi.
+
+\begin{figure}[H]
+\centering
+\begin{tikzpicture}[-latex ,auto ,node distance =4 cm and 5cm ,on grid ,
+semithick ,
+state/.style ={ circle ,top color =white , bottom color = processblue!20 ,
+draw,processblue , text=blue , minimum width =1 cm}]
+\node[state] (C) {$1$};
+\node[state] (A) [above left=of C] {$0$};
+\node[state] (B) [above right =of C] {$2$};
+\path (A) edge [loop left] node[left] {$1/4$} (A);
+\path (C) edge [bend left =25] node[below =0.15 cm] {$1/2$} (A);
+\path (A) edge [bend right = -15] node[below =0.15 cm] {$1/2$} (C);
+\path (A) edge [bend left =25] node[above] {$1/4$} (B);
+\path (B) edge [bend left =15] node[below =0.15 cm] {$1/2$} (A);
+\path (C) edge [bend left =15] node[below =0.15 cm] {$1/2$} (B);
+\path (B) edge [bend right = -25] node[below =0.15 cm] {$1/2$} (C);
+\end{tikzpicture}
+\caption{Esempio di grafo}
+\end{figure}
+\noindent
+La cosa interessante che si può fare con i grafi è che potremmo anche modellizzare un labirinto su di essi. 
+Mettiamo caso che io voglia rappresentare un labirinto con un grafo.
 
 
+\begin{figure}[H]
+  \centering
+  \begin{tikzpicture}[-latex, auto, node distance=4cm and 5cm, on grid,
+    state/.style={circle, top color=white, bottom color=processblue!20, draw, processblue, text=blue, minimum width=1cm}]
+    
+    \node[state] (C) {$1$};
+    \node[state] (E) [above=of C] {$5$};
+    \node[state] (A) [above left=of C] {$3$};
+    \node[state] (F) [below=of A] {$6$};
+    \node[state] (B) [above right=of C] {$2$};
+    \draw (C) -- (A);
+    \draw (C) -- (B);
+    \draw (C) -- (E);
+    \draw (A) -- (C);
+    \draw (B) -- (C);
+    \draw (F) -- (C);
+    \draw (C) -- (F);
+    \draw (A) -- (E);
+    \draw (A) -- (F);
+    \draw (B) -- (E);
+    
+  \end{tikzpicture}
+  \caption{Esempio di "labirinto" con i grafi}
+\end{figure}
+\noindent
+Se definiamo un punto di ingresso- prendiamo per esempio il nodo $3$ -e un punto di uscita- prendiamo per esempio il nodo $2$ -da questo grafo, 
+riusciamo a capire quali connessioni fare per arrivare all'uscita attraversa il minor numero di nodi. 
+In questo caso il percorso $[3,1,2]$ o $[3,5,2]$ hanno il percorso minore.
+\begin{figure}[H]
+  \centering
+  \begin{tikzpicture}[-latex, auto, node distance=4cm and 5cm, on grid,
+    state/.style={circle, top color=white, bottom color=processblue!20, draw, processblue, text=blue, minimum width=1cm}]
+    
+    \node[state] (C) {$1$};
+    \node[state] (E) [above=of C] {$5$};
+    \node[state] (A) [above left=of C] {$3$};
+    \node[state] (F) [below=of A] {$6$};
+    \node[state] (B) [above right=of C] {$2$};
+
+    \draw[red] (A) -- (C) -- (B);
+  \end{tikzpicture}
+\end{figure}
+\noindent
+Quindi il caso migliore mi consente di attraversare solo tre nodi. 
+Ma il caso peggiore? All'apparenza il percorso più lungo è di quattro nodi.
+Ma in realtà potrei continuare a girare in cerchio e non arrivare mai alla fine.
+Un'arco unisce due nodi. Quando due nodi sono uniti da un arco si dice che i due nodi sono
+\textbf{adiacenti}. Un cammino è una sequenza di nodi che sono uniti da archi. 
 
 \end{document}
